crates/tau-protocol/tests/snapshots/wire_goldens__payloads__assistant_payload.snap
---
source: crates/tau-protocol/tests/wire_goldens.rs
expression: p
---
{
  "text": "done",
  "reasoning": "",
  "interrupted": false,
  "calls": [
    {
      "id": "f1",
      "call_id": "c1",
      "name": "bash",
      "arguments": "{\"command\":\"cargo test\"}"
    }
  ]
}
