crates/tau-protocol/tests/snapshots/wire_goldens__payloads__task_snapshot.snap
---
source: crates/tau-protocol/tests/wire_goldens.rs
expression: task()
---
{
  "id": "t-1",
  "title": "ship the parser",
  "status": "active",
  "steps": [
    {
      "text": "write the parser",
      "expected_output": "tests pass",
      "status": "active"
    }
  ],
  "criteria": [],
  "evidence": [],
  "blockers": [],
  "decisions": [],
  "notes": [
    "started"
  ],
  "created_in": "s1",
  "updated": 1700000000000
}
