crates/tau-protocol/tests/snapshots/wire_goldens__payloads__tool_payload_image.snap
---
source: crates/tau-protocol/tests/wire_goldens.rs
expression: p
---
{
  "call_id": "c1",
  "name": "read",
  "args": {
    "path": "a.png"
  },
  "output": {
    "type": "image",
    "media_type": "image/png",
    "data_base64": "AAAA"
  }
}
